styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    /* default theme */
    --color-text-base: #1f2937;
    --color-bg-base: #ffffff;
    --color-bg-base-tag: #f5f5f5;
    --color-bg-base-card: inherit;
    --color-bg-base-card-hover: #f5f5f5;
    --color-bg-base-sidebar-item-hover: #ebe9e9;
    --color-caret: #b4b4b4;
    --color-tilde: #137e8f; /* tilde color for commant prompt effect */

    /* dark theme */
    --color-text-dark: #e0e0e0;
    --color-bg-dark: #141414;
    --color-bg-dark-card: inherit;
    --color-bg-dark-card-hover: #172b29;
    --color-bg-dark-tag: #172b29;
    --color-bg-dark-sidebar-item-hover: #172b29;
    --color-border-base: #1f2937;
    --color-border-dark: #e0e0e0;
  }
  * {
    transition: all 0.1s linear;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply text-2xl font-bold leading-9 mt-4;
  }
  p {
    @apply text-base
  }
  code {
    @apply my-3 rounded-md;
    counter-reset: line;
  }
  code > .line::before {
    counter-increment: line;
    content: counter(line);

    /* Other styling */
    @apply inline-block w-4 mr-8 text-right text-gray-400;
  }
}

@layer utilities {
  .content-visibility-auto {
    content-visibility: auto;
  }
}

